--- a/app/assets/stylesheets/components/user/_card_teacher.scss
+++ b/app/assets/stylesheets/components/user/_card_teacher.scss
@@ -93,6 +93,7 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
+            
             .reserva-boton{
               font-family: Amazon Ember;
               font-size: 16px;
@@ -105,6 +106,9 @@
               text-decoration: none;
               white-space: nowrap;
               transition: color 0.3s, background-color 0.3s;
+              border: 1px solid #22509156;
+              width: 100%;
+              background: white;
               &:hover{
                 background: #225191;
                 color: white;
@@ -135,10 +139,16 @@
       background: white;
       border-radius: 16px;
       padding: 12px;
-      .video{
+      .card-video{
         border-radius: 16px;
         height: 236px;
-        margin-bottom: 8px;
+        margin-bottom: 16px;
+        img{
+          border-radius: 16px;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
       .botton-video{
         display: flex;
@@ -176,6 +186,7 @@
     
   }
 }
+
 
 
 
