--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,7 @@
-
-
-<div class="container-review" data-controller="raiting">
+<div class="container-review" data-controller="rating">
   <h2 class="titulo-comentario">¡Comenta!</h2>
-  <%= simple_form_for [@teacher, @review] do |f|%>
-    <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: {data: { controller: "star-rating", action: "click->form-submit#submit"} }  %>
+  <%= simple_form_for [@teacher, @review] do |f| %>
+    <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: { data: { controller: "star-rating", action: "click->form-submit#submit" } } %>
     <%= f.input :comment, placeholder: "Escribe tu comentario", input_html: { class: "caja_de_comentario" } %>
     <%= f.submit "Agregar comentario", class: "boton-comentario" %>
   <% end %>
